--- a/MessageBoard/Views/Shared/_Layout.cshtml
+++ b/MessageBoard/Views/Shared/_Layout.cshtml
@@ -20,23 +20,23 @@
   <link href='http://fonts.googleapis.com/css?family=Dosis:200,400,600' rel='stylesheet' type='text/css'>
 
   <!-- Stylesheets -->
-  <link href="style/bootstrap.css" rel="stylesheet">
-  <link rel="stylesheet" href="style/font-awesome.css">
+  <link href="~/Content/Template/style/bootstrap.css" rel="stylesheet">
+  <link href="~/Content/Template/style/font-awesome.css" rel="stylesheet" >
   <!--[if IE 7]>
-  <link rel="stylesheet" href="style/font-awesome-ie7.css">
+  <link rel="stylesheet" href="~/Content/Template/style/font-awesome-ie7.css">
   <![endif]-->
 
-  <link href="style/ddlevelsmenu-base.css" rel="stylesheet">
-  <link href="style/ddlevelsmenu-topbar.css" rel="stylesheet">
-  <link href="style/style.css" rel="stylesheet">
+  <link href="~/Content/Template/style/ddlevelsmenu-base.css" rel="stylesheet">
+  <link href="~/Content/Template/style/ddlevelsmenu-topbar.css" rel="stylesheet">
+  <link href="~/Content/Template/style/style.css" rel="stylesheet">
   <!-- Change the template color below. Supported colors blue,red and green. -->
-  <link href="style/blue.css" rel="stylesheet">
-  <link href="style/bootstrap-responsive.css" rel="stylesheet">
-  <link href="style/flexslider.css" rel="stylesheet">
-  <link href="style/prettyPhoto.css" rel="stylesheet">
+  <link href="~/Content/Template/style/blue.css" rel="stylesheet">
+  <link href="~/Content/Template/style/bootstrap-responsive.css" rel="stylesheet">
+  <link href="~/Content/Template/style/flexslider.css" rel="stylesheet">
+  <link href="~/Content/Template/style/prettyPhoto.css" rel="stylesheet">
 
   <!-- Favicon -->
-  <link rel="shortcut icon" href="img/favicon/favicon.png">
+  <link rel="shortcut icon" href="~/Content/Template/img/favicon/favicon.png">
 </head>
 
 <body>
@@ -56,11 +56,11 @@
         <div class="padd">
           <div class="social">
             <!-- Social media icons. Repalce # with your profile links -->
-            <a href="#"><img src="img/facebook.png" alt="" width="40"/></a>
-            <a href="#"><img src="img/twitter.png" alt="" width="40"/></a>
-            <a href="#"><img src="img/linkedin.png" alt="" width="40"/></a>
-            <a href="#"><img src="img/googleplus.png" alt="" width="40"/></a>
-            <a href="#"><img src="img/rss.png" alt="" width="40"/></a>
+            <a href="#"><img src="~/Content/Template/img/facebook.png" alt="" width="40"/></a>
+            <a href="#"><img src="~/Content/Template/img/twitter.png" alt="" width="40"/></a>
+            <a href="#"><img src="~/Content/Template/img/linkedin.png" alt="" width="40"/></a>
+            <a href="#"><img src="~/Content/Template/img/googleplus.png" alt="" width="40"/></a>
+            <a href="#"><img src="~/Content/Template/img/rss.png" alt="" width="40"/></a>
           </div>
         </div>
       </div>
@@ -73,68 +73,70 @@
 
 <div class="fixedbar">
   <div class="container">
-    <div class="row">
-      <div class="span12">
-        <div class="logo">
-          <div class="pull-left">
-            <!-- Logo with font awesome icon (icon-camera-retro). Replace it with your logo. Replace # with your site link -->
-            <h1><a href="#"><i class="icon-camera-retro"></i> Outlooker</a></h1>
+      <div class="row">
+          <div class="span12">
+              <div class="logo">
+                  <div class="pull-left">
+                      <!-- Logo with font awesome icon (icon-camera-retro). Replace it with your logo. Replace # with your site link -->
+                      <h1><a href="#"><i class="icon-camera-retro"></i> Outlooker</a>
+                      </h1>
+                  </div>
+                  <div class="navi">
+                      <!-- Navigation Starts Here -->
+                      <div class="pull-left">
+                          <div id="ddtopmenubar" class="mattblackmenu">
+                              <!-- Main navigation -->
+                              <ul>
+                                  <!-- Add rel="ddsubmenu{count}" to main menu -->
+                                  <li><a href="index.html" rel="ddsubmenu1">Home</a>
+                                      <!-- Sub navigation, A -->
+                                      <!-- Add id "ddsubmenu{count} and class "ddsubmenustyle" -->
+                                      <ul id="ddsubmenu1" class="ddsubmenustyle">
+                                          <li><a href="index-slider.html">With Slider</a></li>
+                                          <li><a href="full-width.html">Full Width</a></li>
+                                      </ul>
+                                  </li>
+                                  <!-- Main navigation -->
+                                  <li><a href="blog.html" rel="ddsubmenu2">Blog</a>
+                                      <!-- Sub Navigation -->
+                                      <ul id="ddsubmenu2" class="ddsubmenustyle">
+                                          <li><a href="blog-single.html">Blog Single</a></li>
+                                      </ul>
+                                  </li>
+                                  <li><a href="portfolio.html" rel="ddsubmenu2">Portfolio</a>
+                                      <!-- Sub navigation -->
+                                      <ul id="ddsubmenu2" class="ddsubmenustyle">
+                                          <li><a href="portfolio-big.html">Portfolio #2</a></li>
+                                      </ul>
+                                  </li>
+                                  <li><a href="about-us.html">About Us</a></li>
+                                  <li><a href="contact-us.html">Contact Us</a></li>
+                                  <li><a href="#" rel="ddsubmenu3">Nav Level #1</a>
+                                      <!-- Sub navigation -->
+                                      <ul id="ddsubmenu3" class="ddsubmenustyle">
+                                          <li><a href="#">Nav Level #2</a>
+                                              <ul>
+                                                  <li><a href="#">Nav Level #3</a></li>
+                                              </ul>
+                                          </li>
+                                      </ul>
+                                  </li>
+                              </ul>
+                          </div>
+                      </div>
+                      <!-- Navigation Ends Here -->
+                  </div>
+              </div>
+              <div class="share">
+                  <div class="pull-right">
+                      <!-- Share it link for slider -->
+                      <p><a href="#" class="open"><span class="hidden-phone">Share it</span> <i class="icon-share"></i></a>
+                      </p>
+                  </div>
+              </div>
           </div>
-          <div class="navi">
-            <!-- Navigation Starts Here -->
-            <div class="pull-left">
-            <div id="ddtopmenubar" class="mattblackmenu">
-            <!-- Main navigation -->
-            <ul>
-              <!-- Add rel="ddsubmenu{count}" to main menu -->
-              <li><a href="index.html" rel="ddsubmenu1">Home</a>
-                <!-- Sub navigation, A -->
-                <!-- Add id "ddsubmenu{count} and class "ddsubmenustyle" -->
-                <ul id="ddsubmenu1" class="ddsubmenustyle">
-                  <li><a href="index-slider.html">With Slider</a></li>
-                  <li><a href="full-width.html">Full Width</a></li>
-                </ul>
-              </li>
-              <!-- Main navigation -->
-              <li><a href="blog.html" rel="ddsubmenu2">Blog</a>
-                  <!-- Sub Navigation -->
-                  <ul id="ddsubmenu2" class="ddsubmenustyle">
-                     <li><a href="blog-single.html">Blog Single</a></li>
-                  </ul>
-              </li>
-              <li><a href="portfolio.html" rel="ddsubmenu2">Portfolio</a>
-                <!-- Sub navigation -->
-                <ul id="ddsubmenu2" class="ddsubmenustyle">
-                  <li><a href="portfolio-big.html">Portfolio #2</a></li>
-                </ul>
-              </li>
-              <li><a href="about-us.html">About Us</a></li>
-              <li><a href="contact-us.html">Contact Us</a></li>
-              <li><a href="#" rel="ddsubmenu3">Nav Level #1</a>
-                <!-- Sub navigation -->
-                <ul id="ddsubmenu3" class="ddsubmenustyle">
-                  <li><a href="#">Nav Level #2</a>
-                    <ul>
-                      <li><a href="#">Nav Level #3</a></li>
-                    </ul>
-                  </li>
-                </ul>
-              </li>
-            </ul>
-            </div>
-            </div>
-            <!-- Navigation Ends Here -->
-          </div>
-        </div>
-        <div class="share">
-          <div class="pull-right">
-            <!-- Share it link for slider -->
-            <p><a href="#" class="open"><span class="hidden-phone">Share it</span> <i class="icon-share"></i></a></p>
-          </div>
-        </div>
+          <div class="clearfix"></div>
       </div>
-      <div class="clearfix"></div>
-    </div>
   </div>
 </div>
 
@@ -142,123 +144,11 @@
 
 <div class="main">
   <div class="container">
-    <div class="row">
-      <div class="span12 hidden-desktop">
-          <div class="padd"><div class="navis"></div></div>
-      </div>
-      <div class="visible-desktop">
-      <div class="span3 sidey">
-        <!-- Sidebar Starts Here -->
-        <div class="padd sidebar">
-          <!-- Each sidebar should be enclosed inside "widget class" -->
-          <!-- 1st widget -->
-          <div class="widget">
-            <!-- Sidebar heading enclosed inside h3. Don't forget to add the class "matopen". -->
-            <h3 class="matopen">Search</h3>
-            <!-- Sidebar content should be enclosed inside div with the class "matter". -->
-            <div class="matter">
-              <!-- Search form -->
-              <form class="form-search">
-                <input type="text" class="input-medium search-query" placeholder="Type to Search...">
-              </form>
-            </div>
-          </div>
-          <!-- 2nd widget -->
-          <div class="widget">
-            <h3 class="matopen">Categories</h3>
-            <div class="matter">
-             <ul>
-              <li><a href="#">Condimentum</a></li>
-              <li><a href="#">Etiam at</a></li>
-              <li><a href="#">Fusce vel</a></li>
-              <li><a href="#">Vivamus</a></li>
-              <li><a href="#">Pellentesque</a></li>
-             </ul>
-            </div>
-          </div>
-          <!-- 3rd widget -->
-          <div class="widget">
-            <h3 class="matopen">Recent Posts</h3>
-            <div class="matter">
-              <ul>
-                <li><a href="#">Sed eu leo orci, condimentum gravida metus</a></li>
-                <li><a href="#">Etiam at nulla ipsum, in rhoncus purus</a></li>
-                <li><a href="#">Fusce vel magna faucibus felis dapibus facilisis</a></li>
-                <li><a href="#">Vivamus scelerisque dui in massa</a></li>
-                <li><a href="#">Pellentesque eget adipiscing dui semper</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <!-- Sidebar Ends Here -->
-      </div>
-      </div>
-        <div class="span9">
-            
-            @RenderBody()
-
-            <div class="whity content">
-                <!-- Content should be encloased inside div with the class "posts" -->
-                <div class="posts">
-                    <!-- Each entry should be enclosed inside div with the class "entry" -->
-                    <div class="entry">
-                        <div class="padd">
-                            <!-- Entry title -->
-                            <h2><a href="#">Etiam adipiscing posuere justo, nec iaculis</a>
-                            </h2>
-                            <!-- Entry para -->
-                            <!-- Add class "alignleft" to image to align left. -->
-                            <p><img src="img/photos/3.jpg" class="alignleft" alt="" width="250"/>Fusce imperdiet, risus eget viverra faucibus, diam mi vestibulum libero, ut vestibulum tellus magna nec enim. Nunc dapibus varius interdum. Phasellus at lorem ut lectus fermentum convallis. Sed diam nisi, pulvinar vitae molestie hendrerit, venenatis eget mauris. Integer porta erat ac eros porta ultrices. Proin porttitor eros a ante molestie gravida commodo dui adipiscing. <a href="#">Morbi dictum nibh gravida</a> mi pretium dapibus. Nullam in est urna. In vitae adipiscing enim. Curabitur rhoncus condimentum lorem, non convallis dolor faucibus eget. In ut nulla est. Sed a interdum mauris. Duis eget risus ac orci vulputate vestibulum sit amet id orci. Etiam ac ante at lorem ultrices elementum. Vestibulum quis elit odio, id hendrerit ipsum. Fusce consequat leo vitae velit interdum at laoreet justo ullamcorper.
-                            </p>
-                            <p>Aenean pharetra, magna et aliquet eleifend, tortor elit suscipit lectus, a dapibus nulla leo et velit. Vestibulum odio erat, porta et hendrerit eu, convallis eget turpis. Cras sit amet nibh dui, a consectetur enim. Nullam sed quam sapien, sit amet venenatis lacus. Vivamus varius suscipit pulvinar.</p>
-                            <blockquote>
-                                <p>Fusce imperdiet, risus eget viverra faucibus, diam mi vestibulum libero, ut vestibulum tellus magna nec enim. Nunc dapibus varius interdum. Phasellus at lorem ut lectus fermentum convallis. Sed diam nisi, pulvinar vitae molestie hendrerit, venenatis eget mauris. Integer porta erat ac eros porta ultrices. </p>
-                                <!-- Author information -->
-                                <small>Ashok</small>
-                            </blockquote>
-                            <p>Aenean porta volutpat neque at suscipit. Quisque a mi velit, vel mollis sapien. Etiam vestibulum bibendum neque, at fermentum leo commodo et. Aenean pharetra, magna et aliquet eleifend, tortor elit suscipit lectus, a dapibus nulla leo et velit. Vestibulum odio erat, porta et hendrerit eu, convallis eget turpis. Cras sit amet nibh dui, a consectetur enim. Nullam sed quam sapien, sit amet venenatis lacus. Vivamus varius suscipit pulvinar.</p>
-                        </div>
-                    </div>
-                    <!-- Features -->
-                    <div class="features">
-                        <div class="row">
-                            <div class="span3">
-                                <!-- Features #1 -->
-                                <div class="padd-f">
-                                    <!-- Heading with font awesome icon -->
-                                    <h4><i class="icon-beaker"></i> Curabitur dapibus nisi</h4>
-                                    <!-- Para -->
-                                    <p>Praesent elementum dignissim hendrerit. Etiam porta congue velit tristique. Duis vehicula, volutpat ultricies, felis consequat lacus, tincidunt odio lacus quis sem. Curabitur dapibus nibh id luctus. Nullam convallis metus nulla, id volutpat mauris. </p>
-                                    <!-- Read more Button -->
-                                    <a href="#" class="btn">Read more</a>
-                                </div>
-                            </div>
-                            <div class="span3">
-                                <!-- Features #2 -->
-                                <div class="padd-m">
-                                    <h4><i class="icon-group"></i> Praesent rhoncus arc</h4>
-                                    <p>Proin ac urna a urna bibendum adipiscing non pharetra nisi. Cras nec arcu leo, et tempor mi. Phasellus a elementum sem. In hac habitasse platea dictumst. Curabitur at gravida lorem. Praesent, a ultrices mauris. Fusce et urna ligula, eget posuere eros.</p>
-                                    <a href="#" class="btn">Read more</a>
-                                </div>
-                            </div>
-                            <div class="span3">
-                                <!-- Features #3 -->
-                                <div class="padd-l">
-                                    <h4><i class="icon-cloud"></i> Maecenas sed diam</h4>
-                                    <p>Sed at elit urna, eu interdum mi. Maecenas sed diam dui, et vulputate lorem. Curabitur pretium, urna et gravida cursus, libero erat dapibus tortor, vel posuere sem. Cras blandit, arcu eget lobortis, risus egestas justo, eget molestie nisl nisl at ligula.</p>
-                                    <a href="#" class="btn">Read more</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-      <div class="mobily hidden-desktop">
+      <div class="row">
+          
+          @RenderBody()
 
       </div>
-    </div>
   </div>
 </div>
 
@@ -331,15 +221,14 @@
 </footer>
 
 <!-- JS -->
-<script src="js/jquery.js"></script>
-<script src="js/easing.js"></script>
-<script src="js/bootstrap.js"></script>
-<script type="text/javascript" src="js/ddlevelsmenu.js"></script>
-<script type="text/javascript" src="js/flexslider.js"></script>
-<script type="text/javascript" src="js/isotype.js"></script>
-<script type="text/javascript" src="js/jquery.prettyPhoto.js"></script>
-<script type="text/javascript" src="js/custom.js"></script>
-
-    @RenderSection("scripts", required: false)
+<script src="~/Scripts/jquery-1.10.2.min.js"></script>
+<script src="~/Scripts/easing.js"></script>
+<script src="~/Scripts/bootstrap.js"></script>
+<script type="text/javascript" src="~/Scripts/ddlevelsmenu.js"></script>
+<script type="text/javascript" src="~/Scripts/flexslider.js"></script>
+<script type="text/javascript" src="~/Scripts/isotype.js"></script>
+<script type="text/javascript" src="~/Scripts/jquery.prettyPhoto.js"></script>
+<script type="text/javascript" src="~/Scripts/custom.js"></script>
+@RenderSection("scripts", required: false)
 </body>
 </html>
