--- a/MessageBoard/Views/Shared/_Layout.cshtml
+++ b/MessageBoard/Views/Shared/_Layout.cshtml
@@ -78,7 +78,7 @@
               <div class="logo">
                   <div class="pull-left">
                       <!-- Logo with font awesome icon (icon-camera-retro). Replace it with your logo. Replace # with your site link -->
-                      <h1><a href="#"><i class="icon-camera-retro"></i> Outlooker</a>
+                      <h1><a href="#"><i class="icon-camera-retro"></i> My App</a>
                       </h1>
                   </div>
                   <div class="navi">
@@ -88,12 +88,12 @@
                               <!-- Main navigation -->
                               <ul>
                                   <!-- Add rel="ddsubmenu{count}" to main menu -->
-                                  <li><a href="index.html" rel="ddsubmenu1">Home</a>
+                                  <li><a href="/Home" rel="ddsubmenu1">Home</a>
                                       <!-- Sub navigation, A -->
                                       <!-- Add id "ddsubmenu{count} and class "ddsubmenustyle" -->
                                       <ul id="ddsubmenu1" class="ddsubmenustyle">
-                                          <li><a href="index-slider.html">With Slider</a></li>
-                                          <li><a href="full-width.html">Full Width</a></li>
+                                          <li><a href="/Home/About">About</a></li>
+                                          <li><a href="/Home/Contact">Contact Us</a></li>
                                       </ul>
                                   </li>
                                   <!-- Main navigation -->
@@ -145,7 +145,7 @@
 <div class="main">
   <div class="container">
       <div class="row">
-          
+
           @RenderBody()
 
       </div>
