With Mail,  Mock, NInject and custom route

--- a/MessageBoard/Views/Home/Contact.cshtml
+++ b/MessageBoard/Views/Home/Contact.cshtml
@@ -64,6 +64,10 @@
                                         </div>
                                         <div class="form-actions">
                                             <button type="submit" class="btn">Send</button>
+                                            @if (ViewBag.MailSent != null && ViewBag.MailSent)
+                                            {
+                                                <div>Mail Sent</div>
+                                            }
                                         </div>
                                     </fieldset>
                                 </form>
