--- a/MessageBoard/Views/Shared/_Layout.cshtml
+++ b/MessageBoard/Views/Shared/_Layout.cshtml
@@ -92,6 +92,7 @@
                                       <!-- Sub navigation, A -->
                                       <!-- Add id "ddsubmenu{count} and class "ddsubmenustyle" -->
                                       <ul id="ddsubmenu1" class="ddsubmenustyle">
+                                          <li>@Html.ActionLink("My Messages", "MyMessages","Home")</li>
                                           <li><a href="/Home/About">About</a></li>
                                           <li><a href="/Home/Contact">Contact Us</a></li>
                                       </ul>
