--- a/MessageBoard/Views/Shared/_Layout.cshtml
+++ b/MessageBoard/Views/Shared/_Layout.cshtml
@@ -34,6 +34,7 @@
   <link href="~/Content/Template/style/bootstrap-responsive.css" rel="stylesheet">
   <link href="~/Content/Template/style/flexslider.css" rel="stylesheet">
   <link href="~/Content/Template/style/prettyPhoto.css" rel="stylesheet">
+  <link href="~/Content/Site.css" rel="stylesheet" />
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="~/Content/Template/img/favicon/favicon.png">
