--- a/MessageBoard/Content/Site.less
+++ b/MessageBoard/Content/Site.less
@@ -1,4 +1,5 @@
 ﻿@maincolor: #888;
+@baseMessageColor: #aaa;
 
 
 
@@ -9,4 +10,30 @@
 
 .bar {
     color: @maincolor;
+}
+
+.message {
+    border: 1px solid @baseMessageColor;
+    margin-bottom: 5px;
+    padding: 5px;
+    border-radius: 5px;
+    background:  lighten(@baseMessageColor, 40%);
+
+    .title {
+        font-weight: bold;
+        font-size: 20px;
+        text-shadow: 2px 2px 4px @baseMessageColor;
+    }
+
+    .reply {
+        border-top: 1px solid @baseMessageColor;
+        margin-top: 8px;
+        margin-left: 20px;
+
+        .created {
+            margin-left: 12px;
+            font-size: 8px;
+            text-shadow: 2px 2px 4px @baseMessageColor;
+        }
+    }
 }
