--- a/MessageBoard/Views/Home/MyMessages.cshtml
+++ b/MessageBoard/Views/Home/MyMessages.cshtml
@@ -3,5 +3,60 @@
     ViewBag.Title = "MyMessages";
 }
 
+<h1 class="heading">My Messages</h1>
+
 <h2>MyMessages</h2>
 
+.messages>.message>(.title>lorem5)+(.date)+.contents+.toolbar
+
+<div class="messages">
+    <div class="message row">
+        <div class="title span10">Consectetur adipiscing elit fusce vel.</div>
+        <div class="date span2">Feb 13, 2017</div>
+        <div class="contents span12">Tincidunt integer eu augue augue nunc elit dolor, luctus placerat scelerisque euismod, iaculis eu lacus nunc mi elit, vehicula ut laoreet ac, aliquam sit amet justo nunc tempor, metus vel.</div>
+        <div class="toolbar span12"><button class="btn btn-primary reply-button">Reply</button></div>
+        <div class="replies span12">
+            <div class="reply">
+                <div class="created pull-right">Feb 28, 2017</div>
+                <div class="content">Tincidunt integer eu augue augue nunc elit dolor, luctus placerat scelerisque euismod, iaculis eu lacus nunc mi elit, vehicula ut laoreet ac, aliquam sit amet justo nunc tempor, metus vel.</div>
+            </div>
+            <div class="reply">
+                <div class="created pull-right">Feb 28, 2017</div>
+                <div class="content">Tincidunt integer eu augue augue nunc elit dolor, luctus placerat scelerisque euismod, iaculis eu lacus nunc mi elit, vehicula ut laoreet ac, aliquam sit amet justo nunc tempor, metus vel.</div>
+            </div>
+            <div class="reply">
+                <div class="created pull-right">Feb 28, 2017</div>
+                <div class="content">Tincidunt integer eu augue augue nunc elit dolor, luctus placerat scelerisque euismod, iaculis eu lacus nunc mi elit, vehicula ut laoreet ac, aliquam sit amet justo nunc tempor, metus vel.</div>
+            </div>
+        </div>
+
+    </div>
+    <div class="message row">
+        <div class="title span10">Consectetur adipiscing elit fusce vel.</div>
+        <div class="date span2">Feb 13, 2017</div>
+        <div class="contents span12">Tincidunt integer eu augue augue nunc elit dolor, luctus placerat scelerisque euismod, iaculis eu lacus nunc mi elit, vehicula ut laoreet ac, aliquam sit amet justo nunc tempor, metus vel.</div>
+        <div class="toolbar span12"><button class="btn btn-primary reply-button">Reply</button></div>
+        <div class="replies span12"></div>
+    </div>
+    <div class="message row">
+        <div class="title span10">Consectetur adipiscing elit fusce vel.</div>
+        <div class="date span2">Feb 13, 2017</div>
+        <div class="contents span12">Tincidunt integer eu augue augue nunc elit dolor, luctus placerat scelerisque euismod, iaculis eu lacus nunc mi elit, vehicula ut laoreet ac, aliquam sit amet justo nunc tempor, metus vel.</div>
+        <div class="toolbar span12"><button class="btn btn-primary reply-button">Reply</button></div>
+        <div class="replies span12"></div>
+    </div>
+    <div class="message row">
+        <div class="title span10">Consectetur adipiscing elit fusce vel.</div>
+        <div class="date span2">Feb 13, 2017</div>
+        <div class="contents span12">Tincidunt integer eu augue augue nunc elit dolor, luctus placerat scelerisque euismod, iaculis eu lacus nunc mi elit, vehicula ut laoreet ac, aliquam sit amet justo nunc tempor, metus vel.</div>
+        <div class="toolbar span12"><button class="btn btn-primary reply-button">Reply</button></div>
+        <div class="replies span12"></div>
+    </div>
+    <div class="message row">
+        <div class="title span10">Consectetur adipiscing elit fusce vel.</div>
+        <div class="date span2">Feb 13, 2017</div>
+        <div class="contents span12">Tincidunt integer eu augue augue nunc elit dolor, luctus placerat scelerisque euismod, iaculis eu lacus nunc mi elit, vehicula ut laoreet ac, aliquam sit amet justo nunc tempor, metus vel.</div>
+        <div class="toolbar span12"><button class="btn btn-primary reply-button">Reply</button></div>
+        <div class="replies span12"></div>
+    </div>
+</div>
