Now we work with DB

--- a/MessageBoard/Views/Home/Index.cshtml
+++ b/MessageBoard/Views/Home/Index.cshtml
@@ -1,5 +1,14 @@
-﻿@{
+﻿@model IEnumerable<MessageBoard.Data.Topic>
+@{
     ViewBag.Title = "Home Page";
+}
+
+@foreach (var topic in Model)
+{
+    <div>
+        @topic.Title
+        -- @topic.Body
+    </div>
 }
 
 <div class="jumbotron">
