Get angular going

--- a/MessageBoard/Views/Shared/_Layout.cshtml
+++ b/MessageBoard/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="myApp">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -224,12 +224,14 @@
 
 <!-- JS -->
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+<script src="~/Scripts/angular.min.js"></script>
 <script src="~/Scripts/easing.js"></script>
 <script src="~/Scripts/bootstrap.js"></script>
 <script type="text/javascript" src="~/Scripts/ddlevelsmenu.js"></script>
 <script type="text/javascript" src="~/Scripts/flexslider.js"></script>
 <script type="text/javascript" src="~/Scripts/jquery.prettyPhoto.js"></script>
 <script type="text/javascript" src="~/Scripts/custom.js"></script>
+
 @RenderSection("scripts", required: false)
 </body>
 </html>
