--- a/MessageBoard/Views/Home/Index.cshtml
+++ b/MessageBoard/Views/Home/Index.cshtml
@@ -11,26 +11,44 @@
 
 <div ng-controller="homeIndexController">
 
+    <h1 class="heading">Messages</h1>
 
-    <div class="jumbotron">
-        <h1>ASP.NET</h1>
-        <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-        <p>
-            <a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a>
-        </p>
-        <div class="row">
-            <div class="span1">
-                Hello
+    <div>Message count: {{count}}</div>
+
+    <div class="messages">
+        <div class="message row" ng-repeat="i in messages">
+            <div class="title span10">{{i.title}}</div>
+            <div class="date span2">{{i.created}}</div>
+            <div class="contents span12">{{i.body}}</div>
+            <div class="toolbar span12"><button class="btn btn-primary reply-button">Reply</button></div>
+            <div class="replies span12">
+                <div class="reply">
+                    <div class="created pull-right">Feb 28, 2017</div>
+                    <div class="content">Tincidunt integer eu augue augue nunc elit dolor, luctus placerat scelerisque euismod, iaculis eu lacus nunc mi elit, vehicula ut laoreet ac, aliquam sit amet justo nunc tempor, metus vel.</div>
+                </div>
+                <div class="reply">
+                    <div class="created pull-right">Feb 28, 2017</div>
+                    <div class="content">Tincidunt integer eu augue augue nunc elit dolor, luctus placerat scelerisque euismod, iaculis eu lacus nunc mi elit, vehicula ut laoreet ac, aliquam sit amet justo nunc tempor, metus vel.</div>
+                </div>
+                <div class="reply">
+                    <div class="created pull-right">Feb 28, 2017</div>
+                    <div class="content">Tincidunt integer eu augue augue nunc elit dolor, luctus placerat scelerisque euismod, iaculis eu lacus nunc mi elit, vehicula ut laoreet ac, aliquam sit amet justo nunc tempor, metus vel.</div>
+                </div>
             </div>
-            <div class="span3">{{name}}</div>
+
         </div>
 
-        @foreach (var topic in Model)
-        {
-            <div>
-                @topic.Title
-                -- @topic.Body
-            </div>
-        }
 
     </div>
+
+
+    @foreach (var topic in Model)
+    {
+        <div>
+            @topic.Title
+            -- @topic.Body
+        </div>
+    }
+
+</div>
+
