Replies and progress bar

--- a/MessageBoard/Views/Home/Index.cshtml
+++ b/MessageBoard/Views/Home/Index.cshtml
@@ -8,12 +8,15 @@
     <script src="~/js/homeIndex.js"></script>
 }
 
-
 <div ng-controller="homeIndexController">
 
     <h1 class="heading">Messages</h1>
 
-    <div>Message count: {{count}}</div>
+    <div>Message count: {{messages.length}}</div>
+
+    <div class="progress progress-striped active" ng-show="isBusy">
+        <div class="bar" style="width: 100%;"></div>
+    </div>
 
     <div class="messages">
         <div class="message row" ng-repeat="i in messages">
@@ -22,33 +25,12 @@
             <div class="contents span12">{{i.body}}</div>
             <div class="toolbar span12"><button class="btn btn-primary reply-button">Reply</button></div>
             <div class="replies span12">
-                <div class="reply">
-                    <div class="created pull-right">Feb 28, 2017</div>
-                    <div class="content">Tincidunt integer eu augue augue nunc elit dolor, luctus placerat scelerisque euismod, iaculis eu lacus nunc mi elit, vehicula ut laoreet ac, aliquam sit amet justo nunc tempor, metus vel.</div>
-                </div>
-                <div class="reply">
-                    <div class="created pull-right">Feb 28, 2017</div>
-                    <div class="content">Tincidunt integer eu augue augue nunc elit dolor, luctus placerat scelerisque euismod, iaculis eu lacus nunc mi elit, vehicula ut laoreet ac, aliquam sit amet justo nunc tempor, metus vel.</div>
-                </div>
-                <div class="reply">
-                    <div class="created pull-right">Feb 28, 2017</div>
-                    <div class="content">Tincidunt integer eu augue augue nunc elit dolor, luctus placerat scelerisque euismod, iaculis eu lacus nunc mi elit, vehicula ut laoreet ac, aliquam sit amet justo nunc tempor, metus vel.</div>
+                <div class="reply" ng-repeat="r in i.replies">
+                    <div class="created pull-right">{{r.created}}</div>
+                    <div class="content">{{r.body}}</div>
                 </div>
             </div>
-
         </div>
-
-
     </div>
-
-
-    @foreach (var topic in Model)
-    {
-        <div>
-            @topic.Title
-            -- @topic.Body
-        </div>
-    }
-
 </div>
 
