Ability to post new topics

--- a/MessageBoard/Views/Shared/_Layout.cshtml
+++ b/MessageBoard/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en" ng-app="myApp">
+<html lang="en" ng-app="@ViewBag.InitModule">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -225,6 +225,7 @@
 <!-- JS -->
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
 <script src="~/Scripts/angular.min.js"></script>
+<script src="~/Scripts/angular-route.min.js"></script>
 <script src="~/Scripts/easing.js"></script>
 <script src="~/Scripts/bootstrap.js"></script>
 <script type="text/javascript" src="~/Scripts/ddlevelsmenu.js"></script>
