--- a/MessageBoard/Views/Home/Index.cshtml
+++ b/MessageBoard/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model IEnumerable<MessageBoard.Data.Topic>
 @{
     ViewBag.Title = "Home Page";
+    ViewBag.InitModule = "homeIndex";
 }
 
 @section scripts
@@ -8,29 +9,5 @@
     <script src="~/js/homeIndex.js"></script>
 }
 
-<div ng-controller="homeIndexController">
 
-    <h1 class="heading">Messages</h1>
-
-    <div>Message count: {{messages.length}}</div>
-
-    <div class="progress progress-striped active" ng-show="isBusy">
-        <div class="bar" style="width: 100%;"></div>
-    </div>
-
-    <div class="messages">
-        <div class="message row" ng-repeat="i in messages">
-            <div class="title span10">{{i.title}}</div>
-            <div class="date span2">{{i.created}}</div>
-            <div class="contents span12">{{i.body}}</div>
-            <div class="toolbar span12"><button class="btn btn-primary reply-button">Reply</button></div>
-            <div class="replies span12">
-                <div class="reply" ng-repeat="r in i.replies">
-                    <div class="created pull-right">{{r.created}}</div>
-                    <div class="content">{{r.body}}</div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
+<div ng-view></div>
