Clean up code [Formatting]

--- a/MessageBoard/Views/Home/Contact.cshtml
+++ b/MessageBoard/Views/Home/Contact.cshtml
@@ -12,7 +12,9 @@
 
 
 <div class="span12 hidden-desktop">
-    <div class="padd"><div class="navis"></div></div>
+    <div class="padd">
+        <div class="navis"></div>
+    </div>
 </div>
 
 <div class="span12">
