--- a/MessageBoard/Templates/topicsView.html
+++ b/MessageBoard/Templates/topicsView.html
@@ -15,7 +15,9 @@
             <div class="title span10">{{i.title}}</div>
             <div class="date span2">{{i.created | date: "medium" }}</div>
             <div class="contents span12">{{i.body}}</div>
-            <div class="toolbar span12"><button class="btn btn-primary reply-button">Reply</button></div>
+            <div class="toolbar span12">
+                <button class="btn btn-primary reply-button">Reply</button>
+            </div>
             <div class="replies span12">
                 <div class="reply" ng-repeat="r in i.replies">
                     <div class="created pull-right">{{r.created | date: "medium" }}</div>
